@@ -108,7 +108,7 @@ typedef unsigned long error_status_t;
 typedef unsigned long PROPID;
 
 #ifndef _REFGUID_DEFINED
-#ifdef __cplusplus
+#if defined (__cplusplus) && !defined (CINTERFACE)
 #define REFGUID const GUID&
 #define REFIID const IID&
 #define REFCLSID const CLSID&
